force-app/main/default/objects/Training__c/Training__c.object-meta.xml
<CustomObject>
    <description>Captures information related to the training of Commercial Card customers after they have been onboarded</description>
    <label>Training</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name of Training</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trainings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>