force-app/main/default/objects/Training__c/fields/Card_Product__c.field-meta.xml
<CustomField>
    <fullName>Card_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Card Product</label>
    <referenceTo>Card_Product__c</referenceTo>
    <relationshipLabel>Trainings</relationshipLabel>
    <relationshipName>Trainings</relationshipName>
    <type>Lookup</type>
</CustomField>