force-app/main/default/objects/Training__c/fields/Client_Source__c.field-meta.xml
<CustomField>
    <fullName>Client_Source__c</fullName>
    <label>Client Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
                <isActive>false</isActive>
                <label>Implementation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>