force-app/main/default/objects/Training__c/fields/Demo_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Demo Date</label>
    <type>Date</type>
</CustomField>