force-app/main/default/objects/Training__c/fields/Preferred_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Preferred Start Date</label>
    <type>Date</type>
</CustomField>