force-app/main/default/objects/Training__c/fields/Process_Training_Stage__c.field-meta.xml
<CustomField>
    <fullName>Process_Training_Stage__c</fullName>
    <label>Process Training Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Declined Training</fullName>
            </value>
            <value>
                <fullName>No Call/No Show</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>