force-app/main/default/objects/Training__c/fields/Product_Trainer__c.field-meta.xml
<CustomField>
    <fullName>Product_Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Trainer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Trainings</relationshipName>
    <type>Lookup</type>
</CustomField>