force-app/main/default/objects/Training__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deluxe</fullName>
            </value>
            <value>
                <fullName>Deluxe ERM</fullName>
            </value>
            <value>
                <fullName>Virtual Plus</fullName>
            </value>
            <value>
                <fullName>VOX</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>MineralTree</fullName>
            </value>
            <value>
                <fullName>Business Travel</fullName>
            </value>
            <value>
                <fullName>Expanded</fullName>
            </value>
            <value>
                <fullName>Payer Direct Hub</fullName>
            </value>
            <value>
                <fullName>Extended</fullName>
                <isActive>false</isActive>
                <label>Extended</label>
            </value>
            <value>
                <fullName>Tier I</fullName>
                <isActive>false</isActive>
                <label>Tier I</label>
            </value>
            <value>
                <fullName>Tier II</fullName>
                <isActive>false</isActive>
                <label>Tier II</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>