force-app/main/default/objects/Training__c/fields/Training_1_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_1_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Training #1 Date</label>
    <type>Date</type>
</CustomField>