force-app/main/default/objects/Training__c/fields/Training_3_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_3_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Training #3 Date</label>
    <type>Date</type>
</CustomField>