force-app/main/default/objects/Training__c/fields/Training_6__c.field-meta.xml
<CustomField>
    <fullName>Training_6__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Training #6 Date</label>
    <type>Date</type>
</CustomField>