force-app/main/default/objects/Training__c/fields/Training_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Training_Contact_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Training Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>